fixes styling for the links and spacing in the layout

--- a/wrightlawgroup/src/Components/CustomFooterNavbar.css
+++ b/wrightlawgroup/src/Components/CustomFooterNavbar.css
@@ -1,4 +1,7 @@
 a {
   text-decoration: none;
-  color: black;
+  color: white;
+}
+a:hover {
+  color: white;
 }
